--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,29 @@
 
   <body>
 
-    {% include header.html %}
 
-    <div class="page-content">
-      <div class="wrapper">
+    <div class="container">
+
+      <div class="row row-centered">
+        {% include header.html %}
+      </div>
+
+      <div class="container col-md-6 col-md-offset-2">
         {{ content }}
+      </div>
+
+
+      <div class="row row-centered">
+        {% include footer.html %}
       </div>
     </div>
 
-    {% include footer.html %}
+
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="{{ site.baseurl }}/bootstrap/js/bootstrap.min.js"></script>
 
   </body>
 
