--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
 
         <!-- The dropdown menu for posts -->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a href="{{ site.baseurl }}/posts" role="button" aria-haspopup="true" aria-expanded="false">
             Posts
             <b class="caret"></b>
           </a>
