Fixed the bug when clicking posts dropdown

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
 
         <!-- The dropdown menu for the 10 most recent posts -->
         <li class="dropdown">
-          <a href="{{ site.baseurl }}/posts" role="button" aria-haspopup="true" aria-expanded="false">
+          <a href="{{ site.baseurl }}/" role="button" aria-haspopup="true" aria-expanded="false">
             Posts
             <b class="caret"></b>
           </a>
